src/styles/_includes/components/_tray.scss
.tray {
  position: fixed;
  width: 100%;
  bottom: 0;
  z-index: 10;
  height: 170px;
  transition: height ease-in-out .3s;
  will-change: height;
  background-color: transparent;

  &__container {
    position: relative;
    height: 100%;
    overflow: hidden;
    background-color: $white;
    -webkit-overflow-scrolling: touch;
  }

  &__ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  &__li {
    width: 100%;
  }

  &__banner {

    &-close {
      height: 20px;
      width: 20px;
      background-color: transparent;

      span {
        content: '';
        height: 2px;
        width: 20px;
        background-color: $white;
        display: block;
        position: absolute;
        transition: background-color 100ms ease-in;
      }

      span:nth-child(1) {
        transform: rotate(-45deg);
      }

      span:nth-child(2) {
        transform: rotate(45deg);
      }
    }

    &-button {
      width: 20px;
      height: 20px;
      padding: 0;
      border: 0;
      appearance: none;
      background-color: transparent;
    }

    &--copy {
      flex: 1;

      p,
      p a {
        font-size: rem(14px);
        line-height: rem(18px);
      }

      a {
        color: $rev-dark-blue;

        &:hover {
          color: $rev-light-blue;
        }
      }

      * {
        color: $white;
      }

      > *:first-child:last-child,
      * *:last-child {
        margin-bottom: 0;
      }

      @include media-breakpoint-up($lg) {
        text-align: center;
        display: flex;
        justify-content: center;
        align-items: center;
      }
    }
  }

  &__button {
    color: $white;
    font-weight: bold;
    display: none;
    width: 100%;
    text-align: left;
    border: 0;
    background-color: transparent;
    font-size: 13px;
    line-height: 1;
    padding-top: 14px;
    padding-bottom: 14px;
    padding-left: 20px;
    padding-right: 20px;

    &:hover {
      text-decoration: none;
      color: $white;
    }

    &--active {
      display: inline-block;
      background-color: $rev-dark-blue;
    }

    &--expand {
      background-color: transparent;
      // display: inline-block;
      padding-right: 25px;
      padding: 0;
      margin: 0;
      width: auto;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    &:focus,
    &:active {
      outline: 0;
    }

    &:not(.tray__button--expand) {
      &:active,
      &:focus {
        outline: 0;
        background-color: $rev-dark-blue;
      }
    }
  }

  &__span {
    // VARIATIONS
    &--icon {
      display: flex;
      width: 24px;
      height: 24px;
      border: 2px solid $white;
      border-radius: 50px;
      position: relative;
      justify-content: center;
      align-items: center;
      margin-left: 10px;
    }

    &--icon::after,
    &--icon::before {
      content: '';
      height: 2px;
      width: 10px;
      background-color: $white;
      display: block;
      position: absolute;
      left: 5px;
      top: 9px;
    }

    &--icon::after {
      transform: rotate(90deg);
      opacity: 1;
      transition: opacity ease-in-out .3s;
      will-change: opacity;
    }

    &--icon-expanded::after {
      opacity: 0;
    }
  }

  &__nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &__block {
    padding: 10px;
    margin-bottom: 25px;

    // VARIATIONS
    &--header {
      margin-bottom: 0;
      padding-left: 0;
      padding-top: 0;
      padding-bottom: 0;
      padding-right: 10px;
      border-top: 1px solid $white;
      background-color: #001034;
    }

    &--copy {
      font-size: 14px;

      > * {
        line-height: rem(19px);
        font-size: rem(14px);
        color: $black;
      }

      ul {
        padding-left: 18px;
      }

      a {
        text-decoration: underline;
        color: $rev-blue;
      }

      p {
        margin-top: 5px;
        margin-bottom: 0;
        line-height: rem(19px);
        font-size: rem(14px);
        color: $black;
      }

      h4 {
        font-size: 15px;
        line-height: 1.2;
        color: #00b5e2;
        font-weight: bold;
        letter-spacing: normal;
        margin-bottom: 0;
      }

      > ul {
        li {
          padding: 4px 0;

          ul {
            padding-left: 16px;

            li {
              padding-top: 3px;
              padding-bottom: 3px;
            }
          }
        }
      }

      @include media-breakpoint-up($md) {
        > ul {
          li {
            padding: 4px 0 4px 10px;

            ul {
              padding-left: 44px;

              li {
                padding-left: 6px;
              }
            }
          }
        }
      }
    }

    &--body {
      margin-bottom: 0;
      height: 100%;
      padding-bottom: 20px;
    }

    &--black-box {
      border: 2px solid $black;
      position: relative;
      padding-right: 10%;
      padding-left: 20px;
      padding-top: 3px;
      margin-bottom: 25px;
      font-weight: bold;

      *,
      * > * {
        font-weight: bold;
      }

      > *:last-child {
        margin-bottom: 0;
      }

      h4,
      p,
      u {
        color: $black;
      }

      p {
        margin-top: 15px;
        line-height: 1.2;
      }

      p:last-child {
        margin-bottom: 1.33em;
      }
    }

    &--isi {
      height: 100%;
      overflow-y: scroll;
    }

    &--hidden {
      display: none;
      padding: 0 20px;
    }
  }

  &__a {
    font-size: 14px;
    color: #111;
    line-height: 19px;

    &:hover,
    &:active {
      color: color(rev, brand-2);
      text-decoration: none;
    }
  }
}

@include media-breakpoint-up($md) {
  .tray {
    height: 143px;

    &__block {
      padding: 5px 25px;
      margin-bottom: 0;

      // VARIATIONS
      &--isi {
        max-width: 900px;
        margin-left: auto;
        margin-right: auto;
        padding: 5px;
      }

      &--header {
        padding: 0;
      }

      &--prescribing {
        // scrollbar-width: none;
        // -ms-overflow-style: none;
        max-width: 100%;
        margin-left: auto;
        margin-right: auto;
        padding: 0;

        &::-webkit-scrollbar {
          width: 0;
          background: transparent;
        }
      }
    }

    &__aside {
      // scrollbar-width: none;
      // -ms-overflow-style: none;

      &::-webkit-scrollbar {
        width: 0;
        background: transparent;
      }
    }

    &__ul {
      display: flex;
    }

    &__button {
      display: inline-block;
      padding-top: 7px;
      padding-bottom: 7px;

      &--expand {
        padding: 0;
        border: 0;
        padding-right: 15px;
        display: flex;

        &:focus.focus-visible {
          color: #ccc;
          background-color: transparent;

          .tray__span--icon {
            border-color: #ccc;
          }

          .tray__span--icon::before,
          .tray__span--icon::after {
            background-color: #ccc;
          }
        }
      }
    }

    &__block {
      // VARIATIONS
      &--prescribing {
        position: relative;
        display: flex;
        margin: 0;
        padding-bottom: 0;
        height: 100%;
      }

      &--pdf {
        padding-top: 0;
        display: flex;
        flex: 3;
        margin-bottom: 0;
        padding-bottom: 0;
        position: relative;
        // max-height: 100%;
        // overflow-y: scroll;
        // padding-left: 15px;
        padding-right: 0;
        // overflow: hidden;
        padding-left: 0;
      }

      &--pdf-inner {
        height: 100%;
        margin: 0;
        padding: 0;
        width: 100%;
      }
    }

    &__aside {
      max-width: 250px;
      padding-top: 0;
      display: flex;
      flex: 1;
      margin-bottom: 0;
      padding-bottom: 0;
      position: relative;
      max-height: 100%;
      overflow-y: scroll;
      padding-right: 15px;
    }

    &__li {
      width: auto;
      display: inline-block;
      border-right: 4px solid $white;
      // margin-left: -5px;

      // VARIATIONS
      &--prescribing {
        margin-left: 0;
        border-right: 0;
        margin-bottom: 20px;
        display: block;
      }
    }

    &__ul {
      &--prescribing {
        height: 100%;
      }
    }
  }
}

@include media-breakpoint-up($lg) {
  .tray {
    &__button {
      font-size: 16px;
      padding-left: 22px;
      padding-right: 22px;
    }

    &__block {
      // MDOIFIERS
      &--isi {
        max-width: 100%;
        padding-left: calc(((100vw - 900px) / 2));
        padding-right: calc(((100vw - 900px) / 2));
        padding-bottom: 40px;
      }

      &--prescribing {
        // max-width: $site-content-width;
        margin-left: auto;
        margin-right: auto;
        padding: 0;
      }
    }
  }
}

@include media-breakpoint-between($md, $xl) {
  .tray {
    &__button {
      &--expand {
        padding-right: 15px;
      }
    }
  }
}

@include media-breakpoint-up($xl) {
  .tray {
    &__container {
      max-width: 100%;
      padding: 0;
    }

    &__block {
      padding: 5px 25px;

      // VARIATIONS
      &--header {
        padding-right: calc(((100vw - #{$site-content-width}) / 2));
        padding-top: 0;
        padding-bottom: 0;
        padding-left: 0;
      }

      &--prescribing {
        // max-width: $site-content-width;
        margin-left: auto;
        margin-right: auto;
        padding: 0;
      }

      &--pdf {
        padding: 0;
      }

      &--body {
        padding-bottom: 0;
        padding-left: 0;
        padding-right: 0;
      }

      &--isi {
        padding-left: calc(((100vw - 900px) / 2));
        padding-right: calc(((100vw - 900px) / 2));
        padding-bottom: 40px;
      }

      &--pdf-inner {
        padding-top: 0;
      }

      &--hidden {
        padding-bottom: 20px;
      }
    }

    &__button {
      // VARIATIONS
      &--expand {
        padding-right: 0;
      }

      &--first {
        padding-left: calc(((100vw - #{$site-content-width}) / 2));
      }
    }
  }
}

